--- a/src/App.css
+++ b/src/App.css
@@ -169,14 +169,14 @@ ul, li {
 }
 
 p {
-  max-width: 500px;
+  max-width: 360px;
   margin-bottom: 12px;
   line-height: 24px;
   padding: 10px 20px;
-  border-radius: 25px;
+  border-radius: 10px;
   position: relative;
   color: white;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .message {
@@ -186,7 +186,7 @@ p {
 }
 
 .message p{
-  font-size: 10px;
+  font-size: 12px;
 }
 
 
